--- a/cowork_ms/views/product_appoval.xml
+++ b/cowork_ms/views/product_appoval.xml
@@ -163,7 +163,8 @@
 	<record id="product_template_action_cowork" model="ir.actions.act_window">
 		<field name="name">物料</field>
 		<field name="res_model">product.template</field>
-		<field name="search_view_id" ref="product_template_cowork_tree_view"/>
+		<!-- <field name="search_view_id" ref="product_template_cowork_tree_view"/> -->
+		<field name="search_view_id" ref="product.product_template_tree_view"/>
 		<field name="view_mode">tree</field>
 		<field name="context">{'default_type': 'product'}</field>
 	</record>
