--- a/cowork_projecty_sales/views/cowork_project_availability_analysis.xml
+++ b/cowork_projecty_sales/views/cowork_project_availability_analysis.xml
@@ -32,7 +32,7 @@
                     <button type="object" class="oe_highlight" string="方案通过" name="sch2done" groups="cowork_projecty_sales.access_group_ceo_in_cowork_projecty_sales" attrs="{'invisible':[('scheme_state','!=','confirm')]}"/>
                     <button type="object" class="oe_highlight" string="方案不通过" name="sch2cancel" groups="cowork_projecty_sales.access_group_ceo_in_cowork_projecty_sales" attrs="{'invisible':[('scheme_state','!=','confirm')]}"/>
                     
-                    <button type="object" class="oe_highlight" string="成品申请" name="approval_finished_product" attrs="{'invisible':[('scheme_state','!=','draft')]}"/>
+                    <button type="object" class="oe_highlight" string="成品申请" name="approval_finished_product" attrs="{'invisible':[('scheme_state','!=','done')]}"/>
 
                     <button string="实体销售" name="%(action_create_sale_order_new)d" type="action" class="oe_highlight"
                     attrs="{'invisible': [('scheme_state', '!=', 'done')]}"
@@ -67,7 +67,7 @@
 							</div>
 						</button>
                         <button type="object" class="oe_stat_button" icon="fa-gear" string="成品分析单" name="action_to_product_approval" attrs="{'invisible':[('product_id','=',False)]}"/>
-                        
+
                         <button type="object" class="oe_stat_button" icon="fa-gear" string="技术性分析" name="tc_ids"/>
                     </div>
                     <h1>
