--- a/cowork_projecty_sales/views/cowork_project_availability_analysis.xml
+++ b/cowork_projecty_sales/views/cowork_project_availability_analysis.xml
@@ -75,6 +75,7 @@
                     </h1>
                     <group>
                         <group>
+                            <!-- <field name="employee_id"/> -->
                             <field name="user_id"/>
                             <field name="apply_date"/>
                         </group>
