--- a/cowork_projecty_sales/views/cowork_technical_analysis.xml
+++ b/cowork_projecty_sales/views/cowork_technical_analysis.xml
@@ -54,35 +54,17 @@
 							<field name="if_proof_on_site"/>
 						</group>
 					</group>
-					<group>
-						<field name="technical_id">
-							<tree editable="bottom">
-								<field name="categ_id"/>
-								<field name="product_id" domain="[('categ_id','=',categ_id)]"/>
-								<field name="count"/>
-							</tree>
-						</field>
-					</group>
-					<!-- <group string="技术参数"> -->
-						<!-- <group>
-							<label for="efficiency_beat"/>
-							<div class="o_row">
-								<field name="efficiency_beat"/>
-								<span>BPM</span>
-							</div>
-							<field name="robot_model_id"/>
-							<field name="plc_controller"/>
-							<field name="module"/>
-							<field name="sensor"/>
-						</group>
-						<group>
-							<field name="cylinder"/>
-							<field name="fixture"/>
-							<field name="motor"/>
-							<field name="ccd_vision"/>
-							<field name="pneumatic_components"/>
-						</group> -->
-					<!-- </group> -->
+					<notebook>
+						<page string="技术参数">
+							<field name="technical_id">
+								<tree editable="bottom">
+									<field name="categ_id"/>
+									<field name="product_id" domain="[('categ_id','=',categ_id)]"/>
+									<field name="count"/>
+								</tree>
+							</field>
+						</page>
+					</notebook>
 					<hr/>
 					<group string="技术评估意见">
 						<group>
