移除“项目分析”中的“方案审批, 2nd

--- a/cowork_projecty_sales/views/cowork_project_availability_analysis.xml
+++ b/cowork_projecty_sales/views/cowork_project_availability_analysis.xml
@@ -111,7 +111,7 @@
                             <label for="abs" groups="cowork_projecty_sales.access_group_ceo_in_cowork_projecty_sales"/>
                             <div class="o_row" groups="cowork_projecty_sales.access_group_ceo_in_cowork_projecty_sales">
                                 <field name="abs"/>
-                                <button type="object" class="oe_highlight" string="方案直接通过" name="sch2done" groups="cowork_projecty_sales.access_group_ceo_in_cowork_projecty_sales" attrs="{'invisible':[('abs','!=',True)]}"/>
+                                <!-- <button type="object" class="oe_highlight" string="方案直接通过" name="sch2done" groups="cowork_projecty_sales.access_group_ceo_in_cowork_projecty_sales" attrs="{'invisible':[('abs','!=',True)]}"/> -->
                             </div>
                         </group>
                         <group attrs="{'invisible':[('tech_analysis_id','=',False)]}">
