--- a/cowork_project_management_flow/views/cowork_bom.xml
+++ b/cowork_project_management_flow/views/cowork_bom.xml
@@ -30,7 +30,7 @@
                     <div class="oe_button_box" name="button_box">
                     </div>
                     <group>
-                        <field name="name" readonly="1"/>
+                        <field name="quote_id" readonly="1"/>
                     </group>
                     <group>
                         <!-- <field name="material_details_ids">
