--- a/cowork_project_management_flow/views/cowork_bom.xml
+++ b/cowork_project_management_flow/views/cowork_bom.xml
@@ -113,7 +113,7 @@
         <field name="inherit_id" ref="ps_purchase.ps_purchase_requisition_form_view_id"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='create_uid']" position="after">
-                <field name="sale_cowork_id" options="{'no_create_edit': True,'no_open': True}"/>
+                <field name="sale_cowork_id" options="{'no_create_edit': True}"/>
             </xpath>
         </field>
     </record>
