--- a/cowork_project_management_flow/views/cowork_bom.xml
+++ b/cowork_project_management_flow/views/cowork_bom.xml
@@ -18,10 +18,10 @@
     </record>
 
     <record model="ir.ui.view" id="view_form_cowork_bom">
-        <field name="name">物料方案</field>
+        <field name="name">设计方案</field>
         <field name="model">cowork.bom</field>
         <field name="arch" type="xml">
-            <form string="物料方案">
+            <form string="设计方案">
                 <header>
                     <button name="get_material_info" string="获取组件信息" type="object" class="oe_highlight"/>
                     <button name="action_to_requisition" string="采购申请" type="object" class="oe_highlight"/>
@@ -30,6 +30,7 @@
                     <div class="oe_button_box" name="button_box">
                     </div>
                     <group>
+                        <field name="project_id" readonly="1"/>
                         <field name="name" readonly="1"/>
                     </group>
                     <group>
@@ -114,6 +115,7 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='create_uid']" position="after">
                 <field name="sale_cowork_id" options="{'no_create_edit': True}"/>
+                <field nmae="project_sale_id" options="{'no_create':True}"/>
             </xpath>
         </field>
     </record>
