--- a/cowork_project_management_flow/views/cowork_bom.xml
+++ b/cowork_project_management_flow/views/cowork_bom.xml
@@ -115,7 +115,7 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='create_uid']" position="after">
                 <field name="sale_cowork_id" options="{'no_create_edit': True}"/>
-                <field nmae="project_sale_id" options="{'no_create_edit':True}"/>
+                <!-- <field nmae="project_sale_id" options="{'no_create_edit':True}"/> -->
             </xpath>
         </field>
     </record>
