--- a/cowork_project_management_flow/views/cowork_bom.xml
+++ b/cowork_project_management_flow/views/cowork_bom.xml
@@ -117,6 +117,31 @@
                 <field name="sale_cowork_id" options="{'no_create_edit': True}"/>
                 <!-- <field name="project_sale_id" options="{'no_create_edit': True}"/> -->
             </xpath>
+            <xpath expr="//field[@name='line_ids']/tree/field[@name='state']" position="after">
+                <field name="approval" invisible="1"/>
+            </xpath>
         </field>
     </record>
+    <record model="ir.ui.view" id="view_tree_ps_purchase_requisition_line">
+        <field name="name">采购申请明细</field>
+        <field name="model">ps.purchase.requisition.line</field>
+        <field name="arch" type="xml">
+            <tree string="采购申请明细" default_order="write_date desc">
+                <field name="product_id"/>
+                <field name="ps_partner_id"/>
+                <field name="product_qty"/>
+                <field name="value_qty"/>
+                <field name="product_uom_id"/>
+                <field name="plan_date"/>
+                <field name="approval"/>
+            </tree>
+        </field>
+    </record>
+    <record model="ir.actions.act_window" id="action_ps_purchase_requisition_line">
+        <field name="name">采购申请明细</field>
+        <field name="res_model">ps.purchase.requisition.line</field>
+        <!-- <field name="view_type">form</field> -->
+        <field name="view_mode">tree</field>
+    </record>
+    <menuitem id="menu_ps_purchase_requistion_line_cowork" name="采购申请明细" parent="menu_cowork_plan_design_root" sequence="3" action="action_ps_purchase_requisition_line"/>
 </odoo>
