--- a/cowork_project_management_flow/views/cowork_bom.xml
+++ b/cowork_project_management_flow/views/cowork_bom.xml
@@ -127,6 +127,7 @@
         <field name="model">ps.purchase.requisition.line</field>
         <field name="arch" type="xml">
             <tree string="采购申请明细" default_order="write_date desc" create="0">
+                <field name="categ_id"/>
                 <field name="product_id"/>
                 <field name="ps_partner_id"/>
                 <field name="product_qty"/>
@@ -134,6 +135,7 @@
                 <field name="product_uom_id"/>
                 <field name="plan_date"/>
                 <field name="approval"/>
+                <button type="object" class="oe_highlight" name="edit_to_purchase" string="采购申请"/>
             </tree>
         </field>
     </record>
