--- a/cowork_project_management_flow/views/cowork_bom.xml
+++ b/cowork_project_management_flow/views/cowork_bom.xml
@@ -101,16 +101,15 @@
 
     <menuitem id="menu_cowork_plan_design_root" name="项目执行" parent="cowork_project_management_flow.menu_cowork_project_management_flow_root" sequence="4"/>
         <menuitem id="menu_cowork_material_bom" name="方案设计" parent="menu_cowork_plan_design_root" sequence="1" action="action_cowork_bom"/>
-        <menuitem id="menu_ps_purchase_requistion_cowork" name="采购申请" parent="menu_cowork_plan_design_root" sequence="2" action="ps_purchase.ps_purchase_requisition_action"/>
+        <!-- <menuitem id="menu_ps_purchase_requistion_cowork" name="采购申请" parent="menu_cowork_plan_design_root" sequence="2" action="ps_purchase.ps_purchase_requisition_action"/> -->
 
-    <record model="ir.ui.view" id="ps_purchase_requisition_inherit_cowork_form_bom">
+    <!-- <record model="ir.ui.view" id="ps_purchase_requisition_inherit_cowork_form_bom">
         <field name="name">bom ps purchase order inherit cowork</field>
         <field name="model">ps.purchase.requisition</field>
         <field name="inherit_id" ref="ps_purchase.ps_purchase_requisition_form_view_id"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='create_uid']" position="after">
                 <field name="sale_cowork_id" options="{'no_create_edit': True}"/>
-                <!-- <field name="project_sale_id" options="{'no_create_edit': True}"/> -->
             </xpath>
             <xpath expr="//field[@name='line_ids']/tree/field[@name='state']" position="after">
                 <field name="approval" invisible="1"/>
@@ -137,7 +136,6 @@
     <record model="ir.actions.act_window" id="action_ps_purchase_requisition_line">
         <field name="name">采购申请明细</field>
         <field name="res_model">ps.purchase.requisition.line</field>
-        <!-- <field name="view_type">form</field> -->
         <field name="view_mode">tree</field>
     </record>
     <menuitem id="menu_ps_purchase_requistion_line_cowork" name="采购申请明细" parent="menu_cowork_plan_design_root" sequence="3" action="action_ps_purchase_requisition_line"/>
@@ -159,5 +157,5 @@
         if records:
             action = records.action_disapproval()
         </field>
-    </record>
+    </record> -->
 </odoo>
