--- a/cowork_project_management_flow/views/cowork_cost_material_detail_line.xml
+++ b/cowork_project_management_flow/views/cowork_cost_material_detail_line.xml
@@ -25,7 +25,7 @@
                         <field name="spare_parts_lines" nolabel="1">
                             <tree editable="bottom">
                                 <field name="categ_id" required="1"/>
-                                <field name="product_tmpl_id" domain="[('categ_id','=',categ_id)]" context="{'default_categ_id':categ_id}" required="1"/>
+                                <field name="product_tmpl_id" domain="[('categ_id','=',categ_id)]" context="{'default_categ_id':categ_id,'default_type': 'product'}" required="1"/>
                                 <field name="brand_id" required="1"/>
                                 <field name="count"/>
                                 <field name="uom_id"/>
